--- a/src/main/resources/templates/supervision/drug_item_maintenance.html
+++ b/src/main/resources/templates/supervision/drug_item_maintenance.html
@@ -19,6 +19,7 @@
     <script src="js/supervision/Drug_item_maintenance.js"></script>
     <script src="js/supervision/check_drug_item.js"></script>
     <script src="js/supervision/drug_item_add.js"></script>
+    <script src="js/supervision/select_box.js"></script>
 
 	
 
