--- a/src/main/resources/templates/supervision/supplier_audit.html
+++ b/src/main/resources/templates/supervision/supplier_audit.html
@@ -20,6 +20,7 @@
     <!--引入自己的js-->
     <script src="js/supervision/supplier_audit.js"></script>
     <script src="js/supervision/checkBox.js"></script>
+    <script src="js/supervision/select_box.js"></script>
 </head>
 <body class="hold-transition skin-red sidebar-mini">
 <!-- .box-body -->
